--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,19 @@ body {
 }
 
 .slide {
-  height: 500px;
   background-color: #f5f5f5;
+}
+
+.inner {
+  height: 500px;
+  background-image: url("/images/slide_bg.png");
+  background-repeat: no-repeat;
+  background-position: center right 30px;
+  position: relative;
+}
+
+.slide .slide_text {
+  position: absolute;
+  top: 124px;
+  left: 20px;
 }
