--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,38 @@ body {
   color: #111;
 }
 
+.btn {
+  font-size: 16px;
+  height: 46px;
+  width: 168px;
+  background-color: #fff;
+  color: #111;
+  border: none;
+  border-radius: 46px;
+  cursor: pointer;
+}
+
+.btn.dark {
+  background-color: #111;
+  color: #fff;
+}
+
+.btn_type2 {
+  height: auto;
+  width: auto;
+  padding: 12px 0;
+  border-radius: unset;
+  border-bottom: 1px solid #111;
+  margin-right: 44px;
+  background-color: transparent;
+}
+
 .center_box {
   width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
+  /* background-color: transparent; */
 }
 
 .top {
@@ -94,8 +121,24 @@ body {
   position: relative;
 }
 
+.slide .slide_btns {
+  margin-left: 30px;
+}
+
 .slide .slide_text {
   position: absolute;
   top: 124px;
   left: 20px;
+}
+
+.slide .slide_text h2 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 40px;
+  line-height: 1.3;
+}
+
+.slide .slide_text h2 b {
+  font-size: 70px;
+  font-weight: 800;
 }
