--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Nanum Gothic", sans-serif;
   color: #111;
+  font-size: 16px;
 }
 
 .btn {
@@ -14,6 +15,12 @@ body {
   border: none;
   border-radius: 46px;
   cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #eb5757;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 .btn.dark {
@@ -38,6 +45,13 @@ body {
   background-color: #fff;
   color: #111;
   border: 1px solid #111;
+}
+
+.btn.btn.small:hover {
+  background-color: #eb5757;
+  border: 1px solid #eb5757;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 .center_box {
@@ -215,5 +229,173 @@ body {
   margin-bottom: 100px;
 }
 
-.product_02 li {
+.product_02 .titles {
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.product_02 .titles h3 {
+  font-size: 36px;
+  font-weight: 800;
+  padding-bottom: 26px;
+}
+
+.product_02 .titles p {
+  color: #666;
+}
+
+.product_02 .items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product_02 .items li {
+  width: 260px;
+  height: 260px;
+  background-color: #f5f5f5;
+  position: relative;
+}
+
+.product_02 .items li img {
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.product_02 .items li img.first {
+  opacity: 1;
+}
+.product_02 .items li img.second {
+  opacity: 0;
+}
+
+.product_02 .items li:hover img.first {
+  opacity: 0;
+  transition: all 0.6s;
+}
+.product_02 .items li:hover img.second {
+  opacity: 1;
+}
+
+/* banner */
+.banner {
+  height: 600px;
+  background-image: url(/images/big_banner.jpg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.banner .center_box {
+  height: 600px;
+  padding: 0;
+  position: relative;
+}
+
+.banner .center_box .banner_text {
+  position: absolute;
+  top: 170px;
+  left: 40px;
+}
+
+.banner .center_box .banner_text h2 {
+  font-size: 64px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.banner .center_box .banner_text p {
+  padding-top: 30px;
+  padding-bottom: 56px;
+  color: #fff;
+  line-height: 1.6;
+}
+
+/* .product_03 */
+.product_03 {
+  margin-top: 120px;
+  margin-bottom: 100px;
+}
+
+.product_03 .titles {
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.product_03 .titles h3 {
+  font-size: 36px;
+  font-weight: 800;
+  padding-bottom: 26px;
+}
+
+.product_03 .titles p {
+  color: #666;
+}
+
+.product_03 .items {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.product_03 .items li {
+  width: 260px;
+  height: 260px;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .product_04 */
+.product_04 {
+  margin-top: 120px;
+  margin-bottom: 100px;
+}
+
+.product_04 .titles {
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+.product_04 .titles h3 {
+  font-size: 36px;
+  font-weight: 800;
+  padding-bottom: 26px;
+}
+
+.product_04 .titles p {
+  color: #666;
+}
+
+.product_04 .items {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.product_04 .items li {
+  width: 360px;
+  height: 360px;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 32px;
+  overflow: hidden;
+}
+
+.product_04 .items li img {
+  width: 360px;
+  height: 360px;
+  transition: all 0.3s;
+}
+
+.product_04 .items li:hover img {
+  transform: scale(1.2);
 }
