--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,9 @@ body {
   padding-top: 30px;
   padding-bottom: 56px;
   color: #fff;
-  line-height: 1.6;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
 }
 
 /* .product_03 */
@@ -398,4 +400,78 @@ body {
 
 .product_04 .items li:hover img {
   transform: scale(1.2);
+}
+
+/* bottom */
+
+.bottom {
+  background-color: #222;
+  color: #fff;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.footer {
+  display: flex;
+}
+
+.footer_info {
+  width: 600px;
+}
+
+.footer_info h1 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.footer_info p {
+  font-size: 14px;
+  padding-top: 40px;
+  padding-bottom: 24px;
+  line-height: 22px;
+}
+
+.social_icons {
+  display: flex;
+}
+
+.social_icons li a {
+  display: inline-block;
+  margin-right: 16px;
+}
+
+.social_icons li a i {
+  font-size: 38px;
+}
+
+.footer_menu {
+  display: flex;
+}
+
+.footer_menu ul li a {
+  display: inline-block;
+  font-size: 16px;
+  color: #f2f2f2;
+  margin-bottom: 30px;
+}
+
+.footer_menu ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer_menu li {
+  width: 200px;
+}
+
+.footer_menu > li > a {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 50px;
+}
+
+.copyright {
+  font-size: 12px;
+  color: #f5f5f5;
+  margin-top: 36px;
 }
